# rust-lambda-workshop-ext

./: .gitignore  LICENSE  README.md
01-hello-world/: README.md
02-option-error/: Cargo.toml  README.md
02-option-error/examples/: error-expect.rs  error-match.rs  error-unwrap-or-else.rs  error.rs  option-expect.rs  option-match.rs  option-none.rs  option-some.rs  option-unwrap-or.rs  option-unwrap.rs
03-hello-lambda/: Cargo.toml  README.md  event.json
04-s3-event/: README.md
04-s3-event/src/: main.rs
05-sqs-event/: Cargo.toml  README.md
05-sqs-event/src/: main.rs
06-custom-event/: Cargo.toml  README.md
06-custom-event/src/: main.rs
07-api-sam/: Cargo.toml  README.md  template.yaml
exercises/: README.md
exercises/01-scream-endpoint/: Cargo.toml  README.md
exercises/01-scream-endpoint/events/: message.json  no-message.json
exercises/01-scream-endpoint/src/: main.rs
exercises/02-s3-event/: Cargo.toml  README.md
exercises/02-s3-event/events/: s3.json
exercises/02-s3-event/src/: main.rs
exercises/03-s3-event-sam/: README.md  template.yaml
exercises/03-s3-event-sam/src/: main.rs
exercises/04-s3-thumbnail/: Cargo.toml  README.md  samconfig.toml  template.yaml
exercises/04-s3-thumbnail/events/: s3.json
exercises/04-s3-thumbnail/src/: main.rs
