[package]
name = "s3-event"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.5.10"
aws-sdk-s3 = "1.65.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["s3"] }
image = "0.25.5"

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
urlencoding = "2.1.3"

